@startuml class-diagram
' Phase 1   AI Text Intelligence Dashboard — complete class diagram

skinparam classAttributeIconSize 0
skinparam classFontStyle bold
skinparam linetype ortho

package "controller" {
  class TextAnalysisController {
    - service: TextAnalysisService
    + analyze(request: AnalyzeRequest): AnalysisResponse
    + classify(request: AnalyzeRequest): ClassifyResponse
    ' Week 4 — Extension 6
    + streamAnalysis(request: AnalyzeRequest): SseEmitter
  }

  ' Week 4 — Extension 7
  class ChatController {
    - chatService: ChatService
    + streamChat(request: ChatRequest): SseEmitter
    + getHistory(conversationId: String): List<Message>
    + listConversations(): List<ConversationSummary>
  }
}

package "config" {
  ' Week 3 — Extension 4
  class LlmClientConfig {
    + restClientBuilder(llmProperties: LlmProperties): RestClient.Builder
  }

  ' Week 3 — Extension 5
  class LlmProperties {
    - models: ModelConfig
    - retry: RetryConfig
    - timeout: TimeoutConfig
  }
}

package "service" {
  class TextAnalysisService {
    - chatClient: ChatClient
    - objectMapper: ObjectMapper
    - systemPrompt: String
    - classifyPrompt: String
    ' Week 3 — Extension 3
    - fallbackModel: String
    ' Week 3 — Extension 4
    - maxAttempts: int
    - baseDelayMs: long
    - random: Random
    + analyze(request: AnalyzeRequest): AnalysisResponse
    + classify(request: AnalyzeRequest): ClassifyResponse
    ' Week 4 — Extension 6
    + streamAnalysis(text: String, emitter: SseEmitter): void
    - attemptAnalyze(request: AnalyzeRequest, modelOverride: String): AnalysisResponse
    - attemptClassify(request: AnalyzeRequest, modelOverride: String): ClassifyResponse
    - parseResponse(raw: String): AnalysisResponse
    - classifyResponse(raw: String): ClassifyResponse
    - sleepBeforeRetry(attempt: int, e: HttpClientErrorException): void
    - logUsage(response: ChatResponse, latencyMs: long, isFallback: boolean, modelName: String): void
    - findPricing(modelName: String): Optional<LlmProperties.ModelPricing>
  }

  ' Week 4 — Extension 7
  class ChatService {
    - chatClient: ChatClient
    - conversationStore: ConversationStore
    + chatStream(request: ChatRequest, emitter: SseEmitter): void
    + getHistory(conversationId: String): List<Message>
    + listConversations(): List<ConversationSummary>
  }

  ' Week 4 — Extension 7
  class ConversationStore {
    - conversations: ConcurrentHashMap<String, ConversationEntry>
    + getOrCreate(conversationId: String): List<Message>
    + append(conversationId: String, user: String, assistant: String): void
    + getHistory(conversationId: String): List<Message>
    + listAll(): List<ConversationSnapshot>
    + evictStale(): void
  }

  ' Week 4 — inner record of ConversationStore
  class ConversationSnapshot <<record>> {
    + id: String
    + messages: List<Message>
    + createdAt: Instant
  }
}

package "dto" {
  class AnalyzeRequest {
    - text: String
  }

  ' Week 4 — Extension 7
  class ChatRequest {
    - conversationId: String
    - message: String
  }

  ' Week 4 — Extension 7
  class ConversationSummary {
    - id: String
    - title: String
    - createdAt: Instant
    - messageCount: int
  }

  ' Week 1
  class AnalysisResponse {
    - summary: String
    - sentiment: Sentiment
    - confidence: double
    - keyTopics: List<String>
    - wordCountEstimate: int
  }

  enum Sentiment {
    positive
    negative
    neutral
  }

  ' Week 2
  class ClassifyResponse {
    - reasoning: String
    - category: Category
    - confidence: double
  }

  enum Category {
    technology
    politics
    sports
    business
    health
    other
  }

  class ErrorResponse {
    - error: String
    - code: ErrorCode
  }

  enum ErrorCode {
    INVALID_INPUT
    LLM_UNAVAILABLE
    PARSE_ERROR
  }
}

package "exception" {
  class LlmUnavailableException {
    + LlmUnavailableException(message: String, cause: Throwable)
  }

  class ParseException {
    + ParseException(message: String, raw: String, cause: Throwable)
  }
}

package "exception.handler" {
  class GlobalExceptionHandler {
    + handleValidation(ex: MethodArgumentNotValidException): ResponseEntity<ErrorResponse>
    + handleLlmUnavailable(ex: LlmUnavailableException): ResponseEntity<ErrorResponse>
    + handleParseError(ex: ParseException): ResponseEntity<ErrorResponse>
    + handleGeneric(ex: Exception): ResponseEntity<ErrorResponse>
  }
}

' ── Dependencies ──────────────────────────────────────────────
TextAnalysisController --> TextAnalysisService : uses
' Week 4 — Extension 7
ChatController --> ChatService : uses

TextAnalysisService --> ChatClient : uses
TextAnalysisService --> LlmProperties : reads
LlmClientConfig --> LlmProperties : reads
' Week 4 — Extension 7
ChatService --> ChatClient : uses
ChatService --> ConversationStore : uses

' ── Data flow (usage, not ownership) ──────────────────────────
TextAnalysisController ..> AnalyzeRequest : accepts
TextAnalysisController ..> AnalysisResponse : returns
TextAnalysisController ..> ClassifyResponse : returns

TextAnalysisService ..> AnalyzeRequest : reads
TextAnalysisService ..> AnalysisResponse : produces
TextAnalysisService ..> ClassifyResponse : produces

' Week 4 — Extension 7
ChatController ..> ChatRequest : accepts
ChatController ..> ConversationSummary : returns
ChatService ..> ChatRequest : reads
ChatService ..> ConversationSummary : produces

AnalysisResponse --> Sentiment : uses
ClassifyResponse --> Category : uses

' ── ConversationStore produces snapshots ──────────────────────
ConversationStore ..> ConversationSnapshot : produces

' ── Exceptions thrown by service ──────────────────────────────
TextAnalysisService ..> LlmUnavailableException : «throws»
TextAnalysisService ..> ParseException : «throws»
' Week 4 — Extension 7
ChatService ..> LlmUnavailableException : «throws»

' ── Exception handler intercepts ──────────────────────────────
GlobalExceptionHandler ..> LlmUnavailableException : «handles»
GlobalExceptionHandler ..> ParseException : «handles»
GlobalExceptionHandler ..> ErrorResponse : produces
GlobalExceptionHandler ..> ErrorCode : uses

' ── ErrorResponse uses ErrorCode enum ─────────────────────────
ErrorResponse --> ErrorCode : uses

' ── Exception hierarchy ────────────────────────────────────────
LlmUnavailableException --|> RuntimeException
ParseException --|> RuntimeException

' ── External dependency (Spring AI / ChatClient) ───────────────
class ChatClient <<external>> {
  + call(prompt: Prompt): ChatResponse
  ' Week 4 — key streaming method
  + stream(prompt: Prompt): Flux<String>
}

note bottom of ConversationStore
  In-memory only (Phase 1).
  Sliding window + scheduled cleanup.
end note

@enduml
